--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ set(head_files
     ${PROJECT_SOURCE_DIR}/ucloud/include/ufile-cppsdk/urlcodec.h
     ${PROJECT_SOURCE_DIR}/ucloud/include/ufile-cppsdk/list.h
     ${PROJECT_SOURCE_DIR}/ucloud/include/ufile-cppsdk/headfile.h
+    ${PROJECT_SOURCE_DIR}/ucloud/include/ufile-cppsdk/tagging.h
     )
 
 install(FILES ${head_files} DESTINATION include/ufile-cppsdk/)
